--- a/recipes/strawberry-protein-cups.html
+++ b/recipes/strawberry-protein-cups.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>kranor2 | Strawberry Protein Cups</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     
     <body>
-        <h1>Strawberry Protein Cups</h1>
+        <h1 class="strawberry header">Strawberry Protein Cups</h1>
         <img src="./images/cups.jpeg">
-        <h2>Description</h2>
-        <p>At only 28 calories and 4.5 grams of protein per serving, these strawberry protein cups are a weight loss cheat code for anyone with a sweet tooth and are a fruity fudge alternative perfect for summer fun. Let's get started!</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="strawberry category">Description</h2>
+        <p class="strawberry">At only 28 calories and 4.5 grams of protein per serving, these strawberry protein cups are a weight loss cheat code for anyone with a sweet tooth and are a fruity fudge alternative perfect for summer fun. Let's get started!</p>
+        <h2 class="strawberry category">Ingredients</h2>
+        <ul class="strawberry">
             <li>3.5 cups strawberries</li>
             <li>4 scoops strawberry protein powder</li>
             <li>3/4 cup zero-calorie sweetner (I recommend monkfruit)</li>
@@ -21,8 +22,8 @@
             <li>Pinch of salt</li>
             <li>Red food coloring (optional)</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="strawberry category">Steps</h2>
+        <ol class="strawberry">
             <li>Combine ingredients into a blender and blend until smooth.</li>
             <li>Pour mixture into 36 cupcake molds.</li>
             <li>Freeze for 24 hours. Store in refrigerated, sealed container.</li>
